src/uw/uw.h

/* Unicode version the tables were generated from. */
const char *uw_unicode_version(void);
/* ------------------------------------------------------------------ */
/* Control-character policy for string-width functions.               */
/* ------------------------------------------------------------------ */

typedef enum {
  UW_CTRL_SKIP = 0, /* controls contribute 0; string width is the sum
                        of the printable clusters (permissive). */
  UW_CTRL_FAIL = 1  /* any control (width -1) makes the whole string
                        return -1 (POSIX wcswidth semantics). */
} uw_ctrl_policy;
/* ------------------------------------------------------------------ */
/* UTF-8 decode policy.                                               */
/* ------------------------------------------------------------------ */

typedef enum {
  UW_UTF8_REPLACE = 0, /* malformed/truncated/overlong/surrogate ->
                           treat as U+FFFD, advance one byte. Never
                           reads past the provided length. */
  UW_UTF8_STRICT = 1   /* on the first malformed sequence, stop; the
                           functions report what was consumed so far. */
} uw_utf8_policy;
/* ------------------------------------------------------------------ */
/* Reentrancy: all functions are thread-safe and reentrant. The only  */
/* state lives in caller-owned uw_state / uw_cluster objects; the    */
/* lookup tables are read-only. No globals are mutated.                */
/* ------------------------------------------------------------------ */

typedef struct {
  uint8_t prev_gcb;
  uint8_t ri_parity;
  uint8_t saw_pict;
  uint8_t zwj_after_pict;
  uint8_t incb_consonant;
  uint8_t incb_linker_seen;
  uint8_t has_prev;
} uw_state;
typedef struct {
  int width;
  uint8_t started;
  uint8_t base_narrow_emoji;
  uint8_t ri_count;
} uw_cluster;
/* ------------------------------------------------------------------ */
/* Per-codepoint width. Returns 0, 1, 2, or -1 for control codes.     */
/* ------------------------------------------------------------------ */

int uw_width_cp(uint32_t cp);
/* ------------------------------------------------------------------ */
/* Segmentation state machine (streaming core).                       */
/* Returns 1 if a grapheme boundary falls immediately before `cp`.    */
/* Drive this directly from a terminal input path with a persistent   */
/* uw_state to segment across buffer reads.                          */
/* ------------------------------------------------------------------ */

void uw_state_init(uw_state *st);
int uw_grapheme_break(uw_state *st, uint32_t cp);
/* ------------------------------------------------------------------ */
/* Cluster width accumulation.                                        */
/* ------------------------------------------------------------------ */

void uw_cluster_init(uw_cluster *cl);
void uw_cluster_push(uw_cluster *cl, uint32_t cp);
int uw_cluster_width(const uw_cluster *cl);
/* ------------------------------------------------------------------ */
/* Single-cluster width, one call, from a buffer.                     */
/* Measures exactly the first grapheme; *consumed receives the number */
/* of code units it spans. Returns the cluster width (-1 for a lone   */
/* control cluster).                                                  */
/* ------------------------------------------------------------------ */

/* UTF-8. `n` is byte length; `policy` selects malformed-input handling. */
int uw_width_utf8(const char *s, size_t n, size_t *consumed,
                  uw_utf8_policy policy);
/* UTF-32 / codepoint array. `n` is codepoint count. */
int uw_width_cps(const uint32_t *cps, size_t n, size_t *consumed);
/* ------------------------------------------------------------------ */
/* Grapheme iteration: code-unit length of the next grapheme starting  */
/* at offset 0. Returns 0 when n == 0. Under UW_UTF8_REPLACE the      */
/* UTF-8 form always advances at least one byte.                       */
/* ------------------------------------------------------------------ */

size_t uw_grapheme_next_utf8(const char *s, size_t n, uw_utf8_policy policy);
size_t uw_grapheme_next_cps(const uint32_t *cps, size_t n);
/* ------------------------------------------------------------------ */
/* Whole-string width (the wcswidth analog).                          */
/* Sums the display width of every grapheme cluster.                   */
/* `ctrl` selects control-character handling.                         */
/* ------------------------------------------------------------------ */

int uw_swidth_utf8(const char *s, size_t n, uw_utf8_policy upolicy,
                   uw_ctrl_policy ctrl);
int uw_swidth_cps(const uint32_t *cps, size_t n, uw_ctrl_policy ctrl);
enum {
  GCB_OTHER = 0,
  GCB_CR,
  GCB_LF,
  GCB_CONTROL,
  GCB_EXTEND,
  GCB_ZWJ,
  GCB_PREPEND,
  GCB_SPACINGMARK,
  GCB_L,
  GCB_V,
  GCB_T,
  GCB_LV,
  GCB_LVT,
  GCB_RI
};
enum { INCB_NONE = 0, INCB_CONSONANT, INCB_EXTEND, INCB_LINKER };
const char *uw_unicode_version(void) { return UW_UNICODE_VERSION; }
int uw_width_cp(uint32_t cp) {
  int w = prop_width(uw_props(cp));
  return w == 3 ? -1 : w;
}
void uw_state_init(uw_state *st) {
  st->prev_gcb = GCB_OTHER;
  st->ri_parity = 0;
  st->saw_pict = 0;
  st->zwj_after_pict = 0;
  st->incb_consonant = 0;
  st->incb_linker_seen = 0;
  st->has_prev = 0;
}
int uw_grapheme_break(uw_state *st, uint32_t cp) {
  uint16_t p = uw_props(cp);
  int gcb = prop_gcb(p);
  int pict = prop_pict(p);
  int incb = prop_incb(p);
  int brk;

  if (!st->has_prev) {
    brk = 1; /* GB1 */
  } else {
    int a = st->prev_gcb, b = gcb;
    if (a == GCB_CR && b == GCB_LF)
      brk = 0; /* GB3 */
    else if (a == GCB_CONTROL || a == GCB_CR || a == GCB_LF)
      brk = 1; /* GB4 */
    else if (b == GCB_CONTROL || b == GCB_CR || b == GCB_LF)
      brk = 1; /* GB5 */
    else if (a == GCB_L &&
             (b == GCB_L || b == GCB_V || b == GCB_LV || b == GCB_LVT))
      brk = 0; /* GB6 */
    else if ((a == GCB_LV || a == GCB_V) && (b == GCB_V || b == GCB_T))
      brk = 0; /* GB7 */
    else if ((a == GCB_LVT || a == GCB_T) && b == GCB_T)
      brk = 0; /* GB8 */
    else if (b == GCB_EXTEND || b == GCB_ZWJ)
      brk = 0; /* GB9 */
    else if (b == GCB_SPACINGMARK)
      brk = 0; /* GB9a */
    else if (a == GCB_PREPEND)
      brk = 0; /* GB9b */
    else if (incb == INCB_CONSONANT && st->incb_consonant &&
             st->incb_linker_seen)
      brk = 0; /* GB9c */
    else if (st->zwj_after_pict && pict)
      brk = 0; /* GB11 */
    else if (a == GCB_RI && b == GCB_RI && (st->ri_parity & 1))
      brk = 0; /* GB12/13 */
    else
      brk = 1; /* GB999 */
  }

  if (gcb == GCB_RI)
    st->ri_parity ^= 1u;
  else
    st->ri_parity = 0;

  if (pict) {
    st->saw_pict = 1;
    st->zwj_after_pict = 0;
  } else if (gcb == GCB_EXTEND) {
    st->zwj_after_pict = 0;
  } else if (gcb == GCB_ZWJ) {
    st->zwj_after_pict = st->saw_pict;
  } else {
    st->saw_pict = 0;
    st->zwj_after_pict = 0;
  }

  if (incb == INCB_CONSONANT) {
    st->incb_consonant = 1;
    st->incb_linker_seen = 0;
  } else if (incb == INCB_LINKER) {
    if (st->incb_consonant)
      st->incb_linker_seen = 1;
  } else if (incb == INCB_EXTEND) {
    /* keeps the sequence alive; no change */
  } else {
    st->incb_consonant = 0;
    st->incb_linker_seen = 0;
  }

  st->prev_gcb = (uint8_t)gcb;
  st->has_prev = 1;
  return brk;
}
void uw_cluster_init(uw_cluster *cl) {
  cl->width = 0;
  cl->started = 0;
  cl->base_narrow_emoji = 0;
  cl->ri_count = 0;
}
void uw_cluster_push(uw_cluster *cl, uint32_t cp) {
  uint16_t p = uw_props(cp);
  int gcb = prop_gcb(p);
  int w = prop_width(p);

  if (gcb == GCB_RI) {
    cl->ri_count++;
    if (!cl->started) {
      cl->width = 1;
      cl->started = 1;
    }
    if (cl->ri_count == 2)
      cl->width = 2;
    return;
  }

  if (cp == VS16) {
    if (cl->base_narrow_emoji)
      cl->width = 2;
    return;
  }
  if (cp == VS15) {
    if (cl->base_narrow_emoji)
      cl->width = 1;
    return;
  }

  if (!cl->started) {
    cl->started = 1;
    cl->width = (w == 3) ? -1 : w;
    if (prop_epres(p) == 0 && w != 2)
      cl->base_narrow_emoji = 1;
  }
}
int uw_cluster_width(const uw_cluster *cl) {
  if (cl->width < 0)
    return -1;
#if UW_CLUSTER_WIDTH_CAP > 0
  return cl->width > UW_CLUSTER_WIDTH_CAP ? UW_CLUSTER_WIDTH_CAP : cl->width;
#else
  return cl->width;
#endif
}
/* ------------------------------------------------------------------ */
/* Single-cluster measurement helpers.                                */
/* ------------------------------------------------------------------ */

int uw_width_cps(const uint32_t *cps, size_t n, size_t *consumed) {
  if (n == 0) {
    if (consumed)
      *consumed = 0;
    return 0;
  }
  uw_state st;
  uw_state_init(&st);
  uw_cluster cl;
  uw_cluster_init(&cl);
  size_t i = 0;
  while (i < n) {
    if (uw_grapheme_break(&st, cps[i]) && cl.started)
      break;
    uw_cluster_push(&cl, cps[i]);
    i++;
  }
  if (consumed)
    *consumed = i;
  return uw_cluster_width(&cl);
}
int uw_width_utf8(const char *s, size_t n, size_t *consumed,
                  uw_utf8_policy policy) {
  if (n == 0) {
    if (consumed)
      *consumed = 0;
    return 0;
  }
  const unsigned char *u = (const unsigned char *)s;
  uw_state st;
  uw_state_init(&st);
  uw_cluster cl;
  uw_cluster_init(&cl);
  size_t i = 0;
  while (i < n) {
    uint32_t cp;
    int bad;
    size_t len = utf8_decode(u + i, n - i, &cp, &bad);
    if (bad && policy == UW_UTF8_STRICT)
      break;
    if (uw_grapheme_break(&st, cp) && cl.started)
      break;
    uw_cluster_push(&cl, cp);
    i += len;
  }
  if (consumed)
    *consumed = i;
  return uw_cluster_width(&cl);
}
size_t uw_grapheme_next_cps(const uint32_t *cps, size_t n) {
  size_t consumed;
  uw_width_cps(cps, n, &consumed);
  return consumed;
}
size_t uw_grapheme_next_utf8(const char *s, size_t n, uw_utf8_policy policy) {
  size_t consumed;
  uw_width_utf8(s, n, &consumed, policy);
  return consumed;
}
/* ------------------------------------------------------------------ */
/* Whole-string width.                                                */
/* ------------------------------------------------------------------ */

int uw_swidth_cps(const uint32_t *cps, size_t n, uw_ctrl_policy ctrl) {
  uw_state st;
  uw_state_init(&st);
  uw_cluster cl;
  uw_cluster_init(&cl);
  int total = 0;
  int have_cluster = 0;

  for (size_t i = 0; i < n; i++) {
    if (uw_grapheme_break(&st, cps[i]) && have_cluster) {
      int w = uw_cluster_width(&cl);
      if (w < 0) {
        if (ctrl == UW_CTRL_FAIL)
          return -1;
      } else
        total += w;
      uw_cluster_init(&cl);
    }
    uw_cluster_push(&cl, cps[i]);
    have_cluster = 1;
  }
  if (have_cluster) {
    int w = uw_cluster_width(&cl);
    if (w < 0) {
      if (ctrl == UW_CTRL_FAIL)
        return -1;
    } else
      total += w;
  }
  return total;
}
int uw_swidth_utf8(const char *s, size_t n, uw_utf8_policy upolicy,
                   uw_ctrl_policy ctrl) {
  const unsigned char *u = (const unsigned char *)s;
  uw_state st;
  uw_state_init(&st);
  uw_cluster cl;
  uw_cluster_init(&cl);
  int total = 0;
  int have_cluster = 0;
  size_t i = 0;

  while (i < n) {
    uint32_t cp;
    int bad;
    size_t len = utf8_decode(u + i, n - i, &cp, &bad);
    if (bad && upolicy == UW_UTF8_STRICT)
      break;
    if (uw_grapheme_break(&st, cp) && have_cluster) {
      int w = uw_cluster_width(&cl);
      if (w < 0) {
        if (ctrl == UW_CTRL_FAIL)
          return -1;
      } else
        total += w;
      uw_cluster_init(&cl);
    }
    uw_cluster_push(&cl, cp);
    have_cluster = 1;
    i += len;
  }
  if (have_cluster) {
    int w = uw_cluster_width(&cl);
    if (w < 0) {
      if (ctrl == UW_CTRL_FAIL)
        return -1;
    } else
      total += w;
  }
  return total;
}